@startuml

title __NOTIFICATIONS's Class Diagram__\n

  namespace edu.temple.homerecognition {
    namespace ui.notifications {
      class edu.temple.homerecognition.ui.notifications.NotificationsFragment {
          + onCreateView()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.notifications {
      class edu.temple.homerecognition.ui.notifications.NotificationsViewModel {
          - mText : MutableLiveData<String>
          + NotificationsViewModel()
          + getText()
      }
    }
  }
  

  edu.temple.homerecognition.ui.notifications.NotificationsFragment -up-|> androidx.fragment.app.Fragment
  edu.temple.homerecognition.ui.notifications.NotificationsFragment o-- edu.temple.homerecognition.ui.notifications.NotificationsViewModel : notificationsViewModel
  edu.temple.homerecognition.ui.notifications.NotificationsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
